--- a/index.html
+++ b/index.html
@@ -434,6 +434,10 @@
     .h-8 {
         height: 2rem
     }
+        
+        .h-16 {
+        height: 4rem
+    }
 
     .h-full {
         height: 100%
@@ -625,6 +629,10 @@
 
     .w-8 {
         width: 2rem
+    }
+        
+        .w-16 {
+        height: 4rem
     }
 
     .gap-6 {
